# cppad_bicycle_traj_opt

./: CMakeLists.txt  README.md  package.xml
include/cppad_bicycle_traj_opt/: class_node_traj_opt.h  pose_marker_maker.h  trajectory_solver.h
launch/: demo.launch  demo_viz.rviz
src/: class_node_traj_opt.cpp  main.cpp  map_baselink_tf.py  pose_marker_maker.cpp  pose_republisher.py  rviz_interactive_marker.py  trajectory_solver.cpp
